# HughAI

./: CMakeLists.txt  README
data/: AIInfo.lua  AIOptions.lua  ConsoleTemplate.txt  EcmaConsoleTemplate.txt
data/BA_core_workflows/: default.xml
src-ai/: StartHere.txt  Todo.txt  architecture.txt  contributing.txt
src-ai/hughai/: BuildTanks.java  CSAI.java  EnemySelector.java  EnemySelector2.java  EnemyTracker.java  EnergyController.java  FrameController.java  GameAdapter.java  GameListener.java  GiveOrderWrapper.java  MetalController.java  MobileFusionController.java  OptionsFromStartScript.java  Ownership.java  PlayerObjects.java  ResourceManager.java  VoiceCommandHandler.java  WorkflowController.java
src-ai/hughai/basictypes/: ArrayIndexer.java  CachedUnit.java.disabled  Float3.java  Int2.java  OOPCommands.java  TerrainPos.java
src-ai/hughai/building/: BuildEconomy.java  Workflow.java  Workflows.java
src-ai/hughai/controllers/level1/: Offense.java  Reconnaissance.java  controllers_readme.txt
src-ai/hughai/controllers/level2/: ScoutControllerRaider.java  TankController.java  TankController2.java  level2coordinators.txt
src-ai/hughai/mapping/: BuildMap.java  BuildPlanner.java  EnemyMap.java  HeightMap.java  LosHelper.java  LosMap.java  Maps.java  Metal.java  MovementMaps.java  ReclaimHelper.java  SlopeMap.java  ThreatMap.java
src-ai/hughai/packcoordinators/: AttackPackCoordinator.java  GuardPackCoordinator.java  IPackCoordinator.java  MoveToPackCoordinator.java  PackCoordinator.java  PackCoordinatorSelector.java  SpreadSearchPackCoordinator.java  SpreadSearchPackCoordinatorWithSearchGrid.java
src-ai/hughai/persistence/: HeightMapPersistence.java
src-ai/hughai/test/: Debugging.java  Tester.java
src-ai/hughai/ui/: Activator.java  ConfigDialog.java  Console.java  ConsoleEcma.java  ConsoleEntryPoint.java  ConsoleJava.java  ExceptionList.java  MainUI.java  UiReflectionHelper.java  WelcomeMessages.java  WorkflowUI.java
src-ai/hughai/unitdata/: BuildTable.java  BuildTree.java  CommanderList.java  HelicopterList.java  Level1ConstructorList.java  Level1FactoryList.java  SideManager.java  StartPosition.java  TankList.java  UnitCommandCache.java  UnitController.java  UnitDefHelp.java  UnitList.java  UnitLists.java
src-ai/hughai/utils/: Cache.java  Config.java  ConfigController.java  ConfigFileReadWriter.java  ConfigHelper.java  ConfigSourceReadWriter.java  ConfigStartScriptReader.java  Converter.java  DrawingUtils.java  Exec.java  FileHelper.java  Formatting.java  LogFile.java  MapHelper.java  ReflectionHelper.java  TdfParser.java  TimeHelper.java  XmlHelper.java
src-loader/hughai/loader/: HughAILoader.java  HughAILoaderFactory.java
src-loader/hughai/loader/utils/: IHughAI.java  Loader.java  StorageUser.java  TransLoadStorage.java
